3 classification models updates
svm (C=100)
mlp(5layers added)
adaboost(n_estimators=100)

--- a/glaucoma_detection4.ipynb
+++ b/glaucoma_detection4.ipynb
@@ -681,7 +681,7 @@
     "\n",
     "def extract_blood_vessels(fundus_image):\n",
     "    if len(fundus_image.shape) == 2 or fundus_image.shape[2] == 1:\n",
-    "        green_channel = fundus_image[:, :, 0].astype(np.uint8)  # Use the only available channel\n",
+    "        green_channel = fundus_image[:, :, 0].astype(np.uint8)\n",
     "    else:\n",
     "        green_channel = fundus_image[:, :, 1].astype(np.uint8) \n",
     "    clahe = cv2.createCLAHE(clipLimit=4.0, tileGridSize=(6,6))\n",
